--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
 				<version>3.0.0-M3</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>kashiarTest.xml</suiteXmlFile>
+						<suiteXmlFile>lawma.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
